# claude-harness

./: .gitignore  CHANGELOG.md  CHANGELOG_v3.0.0.md  CHANGELOG_v3.1.0.md  CHANGELOG_v3.1.1.md  CHANGELOG_v3.2.0.md  CHANGELOG_v3.2.1.md  CRITICAL_BUGFIX_E2E.md  HOW_ENHANCEMENT_MODE_WORKS.md  MANIFEST.in  PREPARE_AUTOGRAPH_FOR_ENHANCEMENT.md  PRE_FLIGHT_CHECKLIST.md  README.md  TEST_ARGS.md  UPGRADE_TO_V3.0_PLAN.md  USER_GUIDE.md  V3.1.0_IMPLEMENTATION_SUMMARY.md  VALIDATION_COMPLETE.md  VALIDATION_REPORT_E2E.md  agent.py  autograph_v3.1_fixes.txt  autonomous_agent.py  client.py  error_handler.py  lsp_config.py  lsp_plugins.py  output_formatter.py  prompts.py  pyproject.toml  security.py  setup.py  setup_mcp.py  skills_manager.py  test_client_skills.py  test_lsp_integration.py  test_skills.py  test_v3_1_features.py
.claude/: __init__.py
.claude/skills/lsp-navigation/: SKILL.md
.claude/skills/puppeteer-testing/: SKILL.md
.github/workflows/: publish-to-pypi.yml
claude_harness.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md
docs/case-studies/: SHERPA_DEEP_CODE_REVIEW.md  SHERPA_VISION_ALIGNMENT.md
docs/v2/: AGENT_SKILLS_ECOSYSTEM.md  AGENT_SKILLS_PLACEMENT.md  CLAUDE_SKILLS_INTEGRATION.md  HARNESS_V2_REQUIREMENTS.md  LEARNINGS_FROM_SHERPA.md  SDLC_AWARE_HARNESS_VISION.md  USEFUL_CLAUDE_SKILLS.md
prompts/: __init__.py  bugfix_mode_prompt.md  coding_prompt.md  enhancement_coding_prompt.md  enhancement_initializer_prompt.md  initializer_prompt.md
specs/: autograph_puppeteer_migration.txt
validators/: browser_cleanup_hook.py  e2e_hook.py  e2e_verifier.py  secrets_hook.py
